--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biccas-Saas Landing Pages </title>
   <link rel="stylesheet" href="src/output.css">
 </head>
@@ -63,7 +63,7 @@
   <!-- Header/Navbar end-->
 
    <!-- Hero Section Start -->
-<section id="home" class="bg-[#f5fdfc] py-28 px-10 sm:px-10 lg:px-20 dark:bg-gray-900">
+<section id="home" class="bg-[#f5fdfc] scroll-mt-28 py-10 sm:py-16 md:py-28 lg:py-28 xl:py-28 px-10 sm:px-10 lg:px-20 dark:bg-gray-900">
   <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-10">
 
     <!-- Left Content -->
@@ -123,7 +123,7 @@
 <!-- Hero Section End -->
 
 <!-- Partner Section start -->
-<section class="bg-[#f5fdfc] py-28 px-10 sm:px-10 lg:px-20 dark:bg-gray-900">
+<section class="bg-[#f5fdfc] scroll-mt-28 py-10 sm:py-16 md:py-28 lg:py-28 xl:py-28 px-10 sm:px-10 lg:px-20 dark:bg-gray-900">
   <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-10 items-start">
     
     <!-- Left Side: Title + Description + Ratings -->
@@ -200,7 +200,7 @@
 <!-- Partner Section end -->
 
  <!-- Features Section Start  --> 
-<section id="features" class="bg-[#f5fefe] py-28 px-10 sm:px-10 lg:px-20 dark:bg-gray-900">
+<section id="features" class="bg-[#f5fefe] scroll-mt-28 py-10 sm:py-16 md:py-28 lg:py-28 xl:py-28 px-10 sm:px-10 lg:px-20 dark:bg-gray-900">
 
  <!-- Top Row: Heading + Paragraph + Button -->
 <div class="flex flex-col md:flex-row md:items-start md:justify-between gap-6 mb-16">
@@ -264,7 +264,7 @@
 <!--  Features Section End  -->
 
  <!-- user benefits start -->
- <section id="benefits" class="bg-[#f5fdfc] py-28 px-10 md:px-20 dark:bg-gray-900">
+ <section id="benefits" class="bg-[#f5fdfc] scroll-mt-28 py-10 sm:py-16 md:py-28 lg:py-28 xl:py-28 px-10 md:px-20 dark:bg-gray-900">
   <div class="flex flex-col md:flex-row items-center gap-12">
     
     <!-- Left side content -->
@@ -319,7 +319,7 @@
  <!-- user benefits end -->
 
 <!-- Pricing Plans start -->
-<section id="pricing" class=" bg-[#f5fdfc] py-28 px-10 sm:px-10 lg:px-20 min-h-screen flex flex-col items-center justify-center dark:bg-gray-900">
+<section id="pricing" class=" bg-[#f5fdfc] scroll-mt-28 py-10 sm:py-16 md:py-28 lg:py-28 xl:py-28 px-10 sm:px-10 lg:px-20 flex flex-col items-center justify-center dark:bg-gray-900">
   <div class="text-center mb-10 w-full">
     <h1 class="text-4xl sm:text-5xl font-bold text-gray-800 mb-4 leading-tight dark:text-white">Choose Plan</h1>
     <h2 class="text-3xl sm:text-4xl font-semibold text-gray-700 dark:text-white">That's Right For You</h2>
@@ -433,7 +433,7 @@
   <section id="contact" class="bg-[#f5fdfc] font-sans dark:bg-gray-900">
 
   <!-- Testimonial + Form -->
-  <div class="max-w-7xl mx-auto py-28 px-10 sm:px-10 lg:px-20">
+  <div class="max-w-7xl mx-auto scroll-mt-28 py-10 sm:py-16 md:py-28 lg:py-28 xl:py-28 px-10 sm:px-10 lg:px-20">
     <div class="flex flex-col sm:flex-row lg:flex-row gap-12 lg:gap-16 items-center">
 
       <!-- Testimonial -->
